--- a/JewsJewelry.Services/JewsJewelry.Services.csproj
+++ b/JewsJewelry.Services/JewsJewelry.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\JewsJewelry.Repositories.Contracts\JewsJewelry.Repositories.Contracts.csproj" />
     <ProjectReference Include="..\JewsJewelry.Services.Contracts\JewsJewelry.Services.Contracts.csproj" />
   </ItemGroup>
