--- a/JewsJewelry.Context.Contracts.Config/JewsJewelry.Context.Contracts.Config.csproj
+++ b/JewsJewelry.Context.Contracts.Config/JewsJewelry.Context.Contracts.Config.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JewsJewelry.Context.Contracts\JewsJewelry.Context.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
