--- a/JewsJewelry.Context.Contracts/JewsJewelry.Context.Contracts.csproj
+++ b/JewsJewelry.Context.Contracts/JewsJewelry.Context.Contracts.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JewsJewelry.Common.Entity\JewsJewelry.Common.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
