--- a/JewsJewelry.Services/JewsJewelry.Services.csproj
+++ b/JewsJewelry.Services/JewsJewelry.Services.csproj
@@ -8,10 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\JewsJewelry.Context.Contracts\JewsJewelry.Context.Contracts.csproj" />
+    <ProjectReference Include="..\JewsJewelry.General\JewsJewelry.General.csproj" />
     <ProjectReference Include="..\JewsJewelry.Repositories.Contracts\JewsJewelry.Repositories.Contracts.csproj" />
     <ProjectReference Include="..\JewsJewelry.Services.Contracts\JewsJewelry.Services.Contracts.csproj" />
   </ItemGroup>
