--- a/JewsJewelry.Services.TestsNew/JewsJewelry.Services.TestsNew.csproj
+++ b/JewsJewelry.Services.TestsNew/JewsJewelry.Services.TestsNew.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,16 +13,19 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.6.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
-      <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JewsJewelry.Context.Contracts\JewsJewelry.Context.Contracts.csproj" />
     <ProjectReference Include="..\JewsJewelry.Context.Tests\JewsJewelry.Context.Tests.csproj" />
-    <ProjectReference Include="..\JewsJewelry.Repositories.Contracts\JewsJewelry.Repositories.Contracts.csproj" />
     <ProjectReference Include="..\JewsJewelry.Repositories\JewsJewelry.Repositories.csproj" />
+    <ProjectReference Include="..\JewsJewelry.Services\JewsJewelry.Services.csproj" />
   </ItemGroup>
 
 </Project>
